# Tomoe

./: .gitignore  Function.py  README.md  Tomoe.py  psexec.py  pyproject.toml  requirements.txt  smb.py  ssh.py  tomoe.py  winrm.py  wsman.py
.github/workflows/: release.yml
